# geo-stream-kafka

./: pyproject.toml  run-client.sh  run-jupyter-notebook.sh  run-server.sh
geostream/: .env.default
geostream/consumer/app/: consumer-cli.py
