[tool.poetry]
name = "geo-stream-kafka"
version = "0.1.0"
description = ""
authors = ["Pyunghyuk Yoo <yoophi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
requests = "^2.25.1"
geojson = "^2.5.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
fastapi = "^0.63.0"
aiokafka = "^0.7.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
